# ao-analytics-nats

./: .env  .env.prod  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: docker-publish.yml
.sqlx/: query-00e7894bf46e0e2b86f2cce90dc5b944accffb4d8b5e3734e7bd49ec79c4d982.json  query-0465011254ce012c9e27ff57ddb6e7bd658870110d514a8599288deffdb62eef.json  query-1115417fc7485533393b11f40c7ffaaeccf819745ba00f0118bb25d61bd9b6bb.json  query-13a51721dd531cb12faa13a5198faebe8314b6308940dd4390c219eeb568cbe7.json  query-30c437293592fe03d9bea5420b49b9d881358f5f2f1033ff64836440df217585.json  query-331856cbb1f64a1b9257c6e70ecaf5e7265b7b292a9ecb8696c0ee8a1e9456c6.json  query-40780aab579c0bf6fbd36c8a1de7a6b2650ec494d3d2b416f3dd3f152722277f.json  query-494baf6a24478707bb2fba2ca0012f77b98997c2f26be45cf63bec0128173a17.json  query-52dd8712fcf4b544d081423b11e145f9b0291a676695ae1daabe41ff6338305b.json  query-56a0860523a80c60c3590e7ca7e83db349e5991370e808f0442cdf2252ba43a2.json  query-5a6b25c535dbcd6e73a1ebd5223cdc67ade31589f2696341ac8390ca5029710e.json  query-6af7bd9ebaadefd3d3609d4cbc1de0297c84a1161a038927e5207d9e6b8cad41.json  query-75791532a2d1e79da68604215527318cbb361db995e19b236f518b96043b9787.json  query-85b20d8d5d0b3c90d858fc487e105ae424c1c00434bffc292bb084a4e5fd93df.json  query-8f8dbc5fc8ac5c2348df7e0dd90d23f3154b2509aaabba3fee51e1bb731bc249.json  query-918b4bba5eada8a276764a10a3ca7c1536dfef7d585740bd9d884e6bdc01a3ca.json  query-9c89c96e4d93031e64a2d8f75ddd608817aff0ac3cd6981c03fa4ffb85829d37.json  query-9fdef98cc9a15f0c3b14fac84279ad760015db9f7b977b039bc04f3e0aba4abd.json  query-c5e7060806d2e7e863cd99de9371b79af2ba302a6554b85f100106502055160f.json  query-dba6cccaa46a2a566b4d677caba8940ce583c6a25c3ae521bedc1430f511a765.json  query-e6f3aa21a8feb8e8cdcc5361a308f89056c8102e445f5a1176260fca30d90a98.json  query-f9ebcd8dcc453f939e55c68584924766ffa81e5129fd5e7f06f7b485b1f1ab17.json
src/: main.rs
src/models/: db.rs  nats.rs
src/utils/: config.rs  db.rs
