[package]
name = "ao-analytics-nats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
async-nats = "0.35.1"
futures-util = "0.3.30"
bytes = "1.6.0"
serde_json = "1.0.118"
serde = "1.0.203"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "macros",
    "runtime-tokio",
    "time",
    "chrono",
] }
dotenv = "0.15.0"
ao-analytics-models = { version = "*", git = "https://github.com/ao-analytics/ao-analytics-models.git" }
config = { version = "*", git = "https://github.com/veqox/config-rs.git" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-util = "0.7.11"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["rt-multi-thread", "time", "sync"] }
futures = { version = "0.3.30", default-features = false, features = [
    "std",
    "async-await",
] }
